# ChangeLog for media-video/mkvtoolnix
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mkvtoolnix/ChangeLog,v 1.188 2013/04/29 07:20:12 radhermit Exp $

  29 Apr 2013; Tim Harder <radhermit@gentoo.org> -mkvtoolnix-5.8.0.ebuild,
  -mkvtoolnix-5.9.0.ebuild, -mkvtoolnix-6.0.0.ebuild, -mkvtoolnix-6.1.0.ebuild:
  Remove old.

*mkvtoolnix-6.2.0 (29 Apr 2013)

  29 Apr 2013; Tim Harder <radhermit@gentoo.org> +mkvtoolnix-6.2.0.ebuild:
  Version bump, drop bzip2 and lzo use flags since upstream dropped support.

*mkvtoolnix-6.1.0-r1 (21 Mar 2013)

  21 Mar 2013; Tim Harder <radhermit@gentoo.org> +mkvtoolnix-6.1.0-r1.ebuild:
  Revision bump, update deps to use system libs for libebml and libmatroska
  (fixes bug #461424 by dev-zero).

*mkvtoolnix-6.1.0 (03 Mar 2013)

  03 Mar 2013; Tim Harder <radhermit@gentoo.org> +mkvtoolnix-6.1.0.ebuild:
  Version bump.

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> mkvtoolnix-5.8.0.ebuild,
  mkvtoolnix-5.9.0.ebuild, mkvtoolnix-6.0.0.ebuild:
  Move Qt dependencies to the new category

*mkvtoolnix-6.0.0 (21 Jan 2013)

  21 Jan 2013; Tim Harder <radhermit@gentoo.org> +mkvtoolnix-6.0.0.ebuild:
  Version bump.

  05 Jan 2013; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Remove redundant maintainer from metadata.

  10 Dec 2012; Tim Harder <radhermit@gentoo.org>
  -files/mkvtoolnix-5.6.0-system-pugixml.patch, -mkvtoolnix-5.7.0.ebuild:
  Remove old.

*mkvtoolnix-5.9.0 (10 Dec 2012)

  10 Dec 2012; Tim Harder <radhermit@gentoo.org> +mkvtoolnix-5.9.0.ebuild:
  Version bump.

  05 Nov 2012; Anthony G. Basile <blueness@gentoo.org> mkvtoolnix-5.8.0.ebuild:
  keyword ~ppc ~ppc64, bug #418355

  04 Oct 2012;  <naota@gentoo.org>
  +files/mkvtoolnix-5.8.0-boost-configure.patch, mkvtoolnix-5.8.0.ebuild:
  Add ~x86-fbsd with adding patch for configure script. #418355

  20 Sep 2012; Christoph Junghans <ottxor@gentoo.org> mkvtoolnix-5.8.0.ebuild: