@@ -1,6 +1,11 @@
 # ChangeLog for media-video/mkvtoolnix
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mkvtoolnix/ChangeLog,v 1.188 2013/04/29 07:20:12 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mkvtoolnix/ChangeLog,v 1.189 2013/06/29 10:05:42 radhermit Exp $
+
+*mkvtoolnix-6.3.0 (29 Jun 2013)
+
+  29 Jun 2013; Tim Harder <radhermit@gentoo.org> +mkvtoolnix-6.3.0.ebuild:
+  Version bump.
 
   29 Apr 2013; Tim Harder <radhermit@gentoo.org> -mkvtoolnix-5.8.0.ebuild,
   -mkvtoolnix-5.9.0.ebuild, -mkvtoolnix-6.0.0.ebuild, -mkvtoolnix-6.1.0.ebuild:
